<resources>
    <string name="app_name">马上学车</string>
    <string name="login_hand_name">苏州驾校</string>
    <string name="login_user_hint">请输入手机号/身份证号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button">登陆</string>
    <string name="sign_in">注册</string>
    <string name="or">或</string>
    <string name="find">忘记密码？</string>
    <string name="find_title">重设密码</string>
    <string name="sign_in_user">请输入手机号，仅限中国大陆地区</string>
    <string name="sign_in_password">请设置6-16位密码</string>
    <string name="sign_in_hint_verify">请输入验证码</string>
    <string name="sign_in_button_verify">发送验证码</string>
    <string name="sign_in_button">提交</string>
    <string name="my_line1">我的学时</string>
    <string name="my_line2">我的学时券</string>
    <string name="my_line3">我的进度</string>
    <string name="my_line4">我的邀请码</string>
    <string name="my_line5">联系客服</string>
    <string name="my_line6">退出登录</string>
    <string name="home_text1">报名学车</string>
    <string name="home_text2">理论学习</string>
    <string name="home_text3">预约练车</string>
    <string name="home_text4">我的预约</string>
    <string name="home_text5">圈子分享</string>
    <string name="home_text6">我的推荐</string>
    <string name="home_text7">我的消息</string>
    <string name="home_text8">我的学时</string>
    <string name="apply_train_text1">报名须知</string>
    <string name="apply_train_text2">学车流程</string>
    <string name="apply_train_text3">体验须知</string>
    <string name="apply_train_text4">课时收费</string>
    <string name="add_text0">请输入报名信息： </string>
    <string name="add_text1">姓名</string>
    <string name="add_text2">性别</string>
    <string name="add_text3">手机号</string>
    <string name="add_text4">身份证号</string>
    <string name="add_text5">地址</string>
    <string name="add_text6">报考类型</string>
    <string name="add_text7">邀请人</string>
    <string name="add_text8">我已阅读并同意此协议</string>
    <string name="add_text9">确定</string>
    <string name="add_text10">套餐内容</string>
    <string name="add_hint1">请输入您的真实姓名</string>
    <string name="add_hint3">请输入您的有效手机号</string>
    <string name="add_hint4">请输入您的有效身份证号</string>
    <string name="add_hint5">请输入您的地址</string>
    <string name="add_hint6">请选择</string>
    <string name="add_hint7">请输入推荐人的邀请码（选填）</string>
    <string name="my_add_news">完善信息</string>
    <string name="pay">支付</string>
    <string name="pay_text1">微信支付</string>
    <string name="pay_text2">支付宝支付</string>
    <string name="pay_text3">学时券支付</string>
    <string name="pay_text4">确认支付</string>
    <string name="pay_explain1">推荐安装微信6.0.2以上版本的用户使用</string>
    <string name="pay_explain2">推荐有支付宝账号的用户使用</string>
    <string name="pay_money">￥%1$.2f</string>
    <string name="add_toast1">请填写姓名</string>
    <string name="add_toast2">请填写手机号</string>
    <string name="add_toast3">请填写身份证号</string>
    <string name="add_toast31">请填写有效的身份证号</string>
    <string name="add_toast4">请填写地址</string>
    <string name="add_toast5">请选择报考类型</string>
    <string name="add_toast6">请点击同意协议</string>
    <string name="add_toast7">请选择套餐</string>
    <string name="reserve_text1">按时间</string>
    <string name="reserve_text2">按教练</string>
    <string name="reserve_text3">按场地</string>
    <string name="reserve_text4">按条件</string>
    <string name="time_fragment_text1">已过期</string>
    <string name="time_fragment_text2">已约满</string>
    <string name="time_fragment_text3">￥%1$.2f\n%2$d位教练</string>
    <string name="more">加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="no_more">没有更多了</string>
    <string name="error">加载失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="site_distance">距离：\n%1$skm</string>
    <string name="my_reserve_text1">全部</string>
    <string name="my_reserve_text2">已预约</string>
    <string name="my_reserve_text3">已结束</string>
    <string name="my_reserve_text4">已取消</string>
    <string name="my_reserve_content_text1">已预约</string>
    <string name="my_reserve_content_text2">进行中</string>
    <string name="my_reserve_content_text3_1">教练取消</string>
    <string name="my_reserve_content_text3_2">驾校取消</string>
    <string name="my_reserve_content_text3_3">学员取消</string>
    <string name="my_reserve_content_text3_4">爽约</string>
    <string name="my_reserve_content_text4">已完成</string>
    <string name="my_reserve_content_text5">查看详情</string>
    <string name="my_reserve_content_text6">二维码</string>
    <string name="my_reserve_content_text7">评价</string>
    <string name="my_reserve_content_text8">已评价</string>
    <string name="reserve_details_text1">预约时段：</string>
    <string name="reserve_details_text2">预约地点：</string>
    <string name="reserve_details_text3">预约教练：</string>
    <string name="reserve_details_text4">车\t牌\t号 ：</string>
    <string name="reserve_details_text5">预约科目：</string>
    <string name="reserve_details_text6">课程费用：</string>
    <string name="reserve_details_text7">教学内容：</string>
    <string name="reserve_details_text8">状\t\t\t 态：</string>
    <string name="reserve_details_text9">预定时间：</string>
    <string name="reserve_details_text10">支付时间：</string>
    <string name="reserve_details_text11">支付方式：</string>
    <string name="reserve_details_text12">教练评语：</string>
    <string name="reserve_details_text13">预约方式：</string>
    <string name="details">详情</string>
    <string name="cancel_details">取消预约</string>
    <string name="comment_pay">评分和支付</string>
    <string name="comment">评分</string>
    <string name="comment_pay2">支付</string>
    <string name="comment_pay3">支付</string>
    <string name="comment_pay_text1">教学能力</string>
    <string name="comment_pay_text2">教学态度</string>
    <string name="comment_pay_text3">仪容仪表</string>
    <string name="comment_pay_text4">车容车况</string>
    <string name="comment_pay_text5">综合评价：</string>
    <string name="comment_pay_hint">请输入评价，您的评价是我们不断进步的动力</string>
    <string name="post_message">发帖</string>
    <string name="post_message_hint">说点什么吧...</string>
    <string name="post_message_send">发表</string>
    <string name="forum_comment_hint">评论</string>
    <string name="my_recommend_text1">我的邀请码</string>
    <string name="my_recommend_text2">使用规则</string>
    <string name="my_recommend_text3">现金奖励</string>
    <string name="my_recommend_text4">学时券奖励</string>
    <string name="person_text1">头像</string>
    <string name="person_text2">昵称</string>
    <string name="person_text3">姓名</string>
    <string name="person_text4">性别</string>
    <string name="person_text5">身份证号</string>
    <string name="person_text6">电话号码</string>
    <string name="person_text7">地址</string>
    <string name="person_text8">登陆密码</string>
    <string name="person">个人中心</string>
    <string name="change_name">修改昵称</string>
    <string name="change_oK">完成</string>
    <string name="change_text1">请输入新昵称：</string>
    <string name="drivers_type_text">您的报考类型%1$s有以下套餐可供选择</string>
    <string name="reserve_verify_text1">您的预约内容如下：</string>
    <string name="reserve_verify_text2">预约时段：</string>
    <string name="reserve_verify_text3">预约场地：</string>
    <string name="reserve_verify_text4">预约教练：</string>
    <string name="reserve_verify_text5">车\t牌\t号\t：</string>
    <string name="reserve_verify_text6">预约科目：</string>
    <string name="reserve_verify_text7">课程费用：</string>
    <string name="reserve_verify_text8">确定</string>
    <string name="select_coach">选教练</string>
    <string name="select_time">选时间</string>
    <string name="reserve_verify">预约确认</string>
    <string name="Huors_text">可用%1$d张</string>
    <string name="inform">通知</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_text1">请输入以前密码：</string>
    <string name="change_password_text2">请输入新密码：</string>
    <string name="change_password_text3">请再次输入新密码：</string>
    <string name="change_password_toast1">请输入旧密码</string>
    <string name="change_password_toast2">请输入新密码</string>
    <string name="change_password_toast3">请输入确认密码</string>
    <string name="change_password_toast4">两次输入的密码不同，请重新输入</string>
    <string name="refresh">刷新</string>
    <string name="Agreement">协议</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="select_school_text_hint">请输入驾校代码</string>
    <string name="select_school_text">下一步</string>
    <string name="sign_in_title">用户注册</string>
    <string name="school_name">%1$s欢迎您</string>
    <string name="map">地图</string>

    <string name="Toast_phone">请输入手机号！</string>
    <string name="Toast_phone1">请输入有效的手机号！</string>
    <string name="Toast_password">请输入密码！</string>
    <string name="Toast_Code_isEmpty">请获取验证码</string>
    <string name="Toast_Code">验证码错误！</string>
    <string name="Toast_internet_no">后台或网络出错，请稍后再试！</string>
    <string name="Toast_internet">请连接网络！</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="Toast_loading">正在加载，请稍少再试！</string>
    <string name="Toast_change_name">请输入新的昵称</string>
    <string name="cut_end">抱歉！选择的最小数量为零</string>
    <string name="add_big">抱歉！您没有那么多学时券</string>
    <string name="add_max">已经足够支付学时了</string>
    <string name="text_New_Nickme">请填写新的昵称</string>
    <string name="Toast_select_school">请输入驾校代码！</string>
    <string name="coach_start_level">星级</string>
    <string name="coach_teaching_age">教龄</string>
    <string name="coach_name_input_promote">请输入教练姓名</string>
    <string name="condition_select_subject">选择科目</string>
    <string name="condition_select_coach">选择教练</string>
    <string name="condition_select_time">选择时段</string>
    <string name="condition_select_space">选择场地</string>
    <string name="condition_no_filter">不限</string>
    <string name="condition_select_date">选择日期</string>
    <string name="condition_query">查询</string>
    <string name="get_subject_failed">获取科目信息失败</string>
    <string name="subject_empty">科目信息为空</string>
    <string name="get_branch_failed">获取场地信息失败</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>


</resources>
